--- a/gradle.properties
+++ b/gradle.properties
@@ -7,9 +7,8 @@ org.gradle.debug=false
 # you can also find the latest versions at: https://parchmentmc.org/docs/getting-started
 neogradle.subsystems.parchment.minecraftVersion=1.20.3
 neogradle.subsystems.parchment.mappingsVersion=2023.12.31
+
 # Environment Properties
-# You can find the latest versions here: https://projects.neoforged.net/neoforged/neoforge
-# The Minecraft version must agree with the Neo version to get a valid artifact
 minecraft_version=1.20.4
 # The Minecraft version range can use any release version of Minecraft as bounds.
 # Snapshots, pre-releases, and release candidates are not guaranteed to sort properly
@@ -23,21 +22,13 @@ neo_version_range=[20.4,)
 loader_version_range=[2,)
 
 ## Mod Properties
-
-# The unique mod identifier for the mod. Must be lowercase in English locale. Must fit the regex [a-z][a-z0-9_]{1,63}
-# Must match the String constant located in the main mod class annotated with @Mod.
-mod_id=examplemod
-# The human-readable display name for the mod.
-mod_name=Example Mod
-# The license of the mod. Review your options at https://choosealicense.com/. All Rights Reserved is the default.
-mod_license=All Rights Reserved
-# The mod version. See https://semver.org/
 mod_version=1.0.0
-# The group ID for the mod. It is only important when publishing as an artifact to a Maven repository.
-# This should match the base package used for the mod sources.
-# See https://maven.apache.org/guides/mini/guide-naming-conventions.html
-mod_group_id=com.example.examplemod
-# The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=YourNameHere, OtherNameHere
-# The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
+mod_id=runic
+mod_name=Runic
+mod_license=MIT
+mod_group_id=dev.bagel
+mod_authors=TheWinABagel
+mod_description=Rune based magic mod
+
+## Dependencies
+placebo_version=9.0.4
