i have no idea what im doing

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,12 @@ repositories {
     mavenLocal()
 }
 
+minecraft {
+    accessTransformers {
+        file('src/main/resources/META-INF/accesstransformer.cfg')
+    }
+}
+
 base {
     archivesName = mod_id
 }
